--- a/src/index.css
+++ b/src/index.css
@@ -27,5 +27,14 @@ body{
 }
 
 .brandSelect {
-    @apply inline-flex h-14 w-auto items-center justify-around rounded-3xl border-4 border-[#1e3150] uppercase px-6 duration-100 ease-linear;
+    @apply inline-flex h-14 w-36 items-center justify-around rounded-full border-4 border-[#1e3150] uppercase px-6 duration-100 ease-linear hover:bg-[#7e76dd];
+}
+
+@keyframes pulse {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
 }
